--- a/trufflebox/public/index.html
+++ b/trufflebox/public/index.html
@@ -22,6 +22,7 @@
             </p>
         </div>
       </noscript>
-        <div id="root"></div>
+      <script src="/env.js"></script>
+    <div id="root"></div>
 </body>
 </html>
